# SkyBank

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  users_settings1.json
reports_file/: spending_by_category.txt
src/: get_data.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py  tests_views.py
