[tool.poetry]
name = "skybank"
version = "0.1.0"
description = ""
authors = ["Egor Petruschenko <jaguar.94@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
